[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/template_scenes/splash_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/opening_splash_screen.gd" type="Script" id=2]
[ext_resource path="res://images/raccoon_icon_transparent.png" type="Texture" id=3]
[ext_resource path="res://scenes/link_button.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "opening"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("logos/raccoon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.584314, 0.8, 0.360784, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("links/buttons/github:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("links/buttons/ko_fi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("links/buttons/mastodon:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("links/buttons/twitter:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="opening_splash_screen" instance=ExtResource( 1 )]
script = ExtResource( 2 )
next_scene = "res://scenes/title_screen.tscn"
new_anim = "opening"

[node name="background" type="ColorRect" parent="." index="0"]
margin_right = 666.0
margin_bottom = 666.0

[node name="logos" type="Control" parent="." index="1"]
margin_right = 666.0
margin_bottom = 666.0

[node name="raccoon" type="TextureRect" parent="logos" index="0"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 165.0
margin_top = 33.0
margin_right = 501.0
margin_bottom = 369.0
texture = ExtResource( 3 )
expand = true

[node name="links" type="MarginContainer" parent="." index="2"]
margin_left = 198.0
margin_top = 400.0
margin_right = 468.0
margin_bottom = 500.0

[node name="buttons" type="VBoxContainer" parent="links" index="0"]
margin_right = 270.0
margin_bottom = 100.0

[node name="github" parent="links/buttons" index="0" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 270.0
margin_bottom = 22.0
text = "github: Raccoon-JS"
link = "https://github.com/Raccoon-JS"

[node name="ko_fi" parent="links/buttons" index="1" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 26.0
margin_right = 270.0
margin_bottom = 48.0
text = "ko-fi: raccoonjs"
link = "https://ko-fi.com/raccoonjs"

[node name="mastodon" parent="links/buttons" index="2" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 52.0
margin_right = 270.0
margin_bottom = 74.0
text = "@raccoon_JS@mastodon.social"
link = "https://mastodon.social/@raccoon_JS"

[node name="twitter" parent="links/buttons" index="3" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 78.0
margin_right = 270.0
margin_bottom = 100.0
text = "twitter: @Raccoon_JS"
link = "https://twitter.com/Raccoon_JS"

[node name="ani_player" parent="." index="3"]
anims/opening = SubResource( 1 )
[connection signal="animation_finished" from="ani_player" to="." method="_on_ani_player_finished"]
